added menu items and qb

--- a/index.html
+++ b/index.html
@@ -54,21 +54,30 @@
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>References</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+              <li><a onclick="gourl('https://dockstarter.com/');">DockSTARTer</a></li>
+              <li><a onclick="gourl('https://wiki.servarr.com/');">Servarr Wiki</a></li>
+              <li class="dropdown"><a href="#"><span>Containers/Guides</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a onclick="gourl('https://github.com/qdm12/gluetun');">Gluetun</a></li>
+                  <li><a onclick="gourl('https://trash-guides.info/Hardlinks/How-to-setup-for/Docker/');">TRaSH Guides</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li class="dropdown"><a href="#"><span>To Do</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a onclick="gourl('https://recyclarr.dev/wiki/');">Recyclarr</a></li>
+                  <li><a onclick="gourl('https://dockstarter.com/apps/h5ai/');">H5ai (file browser -- or paperless ngx)</a></li>
+                  <li><a onclick="gourl('https://dockstarter.com/apps/piwigo/');">Piwigo (photos)</a></li>
+                  <li><a onclick="gourl('https://dockstarter.com/apps/photostructure/');">PhotoStructure</a></li>
+                  <li><a onclick="gourl('https://damselfly.info/');">damselfly (photos --or PhotoPrism or Lychee)</a></li>
+                  <li><a onclick="gourl('https://dockstarter.com/apps/mylar3/');">Mylar3</a></li>
+                  <li><a onclick="gourl('https://dockstarter.com/apps/adguard/');">Adguard</a></li>
+                  <li><a onclick="gourl('https://dockstarter.com/apps/samba/');">Samba</a></li>
+                  <li><a onclick="gourl('https://dockstarter.com/apps/jellyfin/');">Jellyfin ?</a></li>
+                  <li><a onclick="gourl('https://github.com/awesome-selfhosted/awesome-selfhosted?tab=readme-ov-file#awesome-selfhosted');">Awesome-Selfhosted</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
@@ -893,6 +902,9 @@
   <script>
     function goto(port){
       var url = 'http://192.168.12.234:' + port;
+      gourl(url);
+    }
+    function gourl(url){
       window.open(url, '_blank');
     }
   </script>
