--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h3><a >qBittorrent</a></h3>
           </div>
         </div>
-        <div class="col-xl-2 col-md-3 col-sm-4">
+        <!-- <div class="col-xl-2 col-md-3 col-sm-4">
           <div class="icon-box" onclick="goto(8071);">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="fill: rgba(255, 194, 49, 1);">
               <path d="M2.165 19.551c.186.28.499.449.835.449h15c.4 0 .762-.238.919-.606l3-7A.998.998 0 0 0 21 11h-1V8c0-1.103-.897-2-2-2h-6.655L8.789 4H4c-1.103 0-2 .897-2 2v13h.007a1 1 0 0 0 .158.551zM18 8v3H6c-.4 0-.762.238-.919.606L4 14.129V8h14" 
@@ -179,15 +179,16 @@
             </svg>
             <h3><a >gossa</a></h3>
           </div>
-        </div>
+        </div> -->
         <div class="col-xl-2 col-md-3 col-sm-4">
           <div class="icon-box" onclick="goto(8070);">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 310.000000 310.000000"
                 preserveAspectRatio="xMidYMid meet">
-              <circle cx="155" cy="155" r="155" fill="#000000" />
+              <circle cx="155" cy="155" r="155" fill="#666666" />
+              <circle cx="155" cy="155" r="153" fill="#000000" />
               <path d="M75,155 L100,155 L122,95 L160,210 L192,127 L205,155 L230,155"
-                 stroke="rgb(7,223,114)" fill="none" stroke-width="9" />
+                stroke="rgb(7,223,114)" fill="none" stroke-width="9" />
            </svg>
            <h3><a >Speedtest</a></h3>
           </div>
