--- a/index.html
+++ b/index.html
@@ -56,14 +56,22 @@
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li class="dropdown"><a href="#"><span>References</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a onclick="gourl('https://dockstarter.com/');">DockSTARTer</a></li>
-              <li><a onclick="gourl('https://wiki.servarr.com/');">Servarr Wiki</a></li>
-              <li><a onclick="gourl('https://hub.docker.com/');">docker hub</a></li>
+              
+              <li class="dropdown"><a href="#"><span>Other Links</span> <i class="bi bi-chevron-right"></i></a>
+                <ul>
+                  <li><a  onclick="gourl('https://account.proton.me/login');">Proton</a></li>
+                  <li><a  onclick="gourl('https://members.easynews.com/login');">EasyNews</a></li>
+                  <li><a  onclick="gourl('https://nzbgeek.info/logon.php');">NZBgeek</a></li>
+                </ul>
+              </li>
               
               <li class="dropdown"><a href="#"><span>Containers/Guides</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
+                  <li><a onclick="gourl('https://dockstarter.com/');">DockSTARTer</a></li>
+                  <li><a onclick="gourl('https://wiki.servarr.com/');">Servarr Wiki</a></li>
                   <li><a onclick="gourl('https://github.com/qdm12/gluetun');">Gluetun</a></li>
                   <li><a onclick="gourl('https://trash-guides.info/Hardlinks/How-to-setup-for/Docker/');">TRaSH Guides</a></li>
+                  <li><a onclick="gourl('https://hub.docker.com/');">docker hub</a></li>
                 </ul>
               </li>
               <li class="dropdown"><a href="#"><span>To Do</span> <i class="bi bi-chevron-right"></i></a>
@@ -83,9 +91,6 @@
             </ul>
           </li>
           <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
-          <li><a  onclick="gourl('https://account.proton.me/login');">Proton</a></li>
-          <li><a  onclick="gourl('https://members.easynews.com/login');">EasyNews</a></li>
-          <li><a  onclick="gourl('https://nzbgeek.info/logon.php');">NZBgeek</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
