--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           document.getElementById('signout_button').style.visibility = 'visible';
           document.getElementById('authorize_button').innerText = 'Refresh';
           await listMajors();
+          await listSheets();
         };
 
         if (gapi.client.getToken() === null) {
@@ -143,6 +144,28 @@
             'Name, Major:\n');
         document.getElementById('content').innerText = output;
       }
+
+      
+  async function listSheets() {
+    gapi.client.sheets.spreadsheets.get({
+      spreadsheetId: 'my',  // special value for requesting own sheets
+    }).then(function(response) {
+      var spreadsheet = response.result;
+      var sheets = spreadsheet.sheets;
+
+      if (sheets && sheets.length > 0) {
+        console.log('Sheets:');
+        sheets.forEach(function(sheet) {
+          console.log(sheet.properties.title);
+        });
+      } else {
+        console.log('No sheets found.');
+      }
+    }, function(response) {
+      console.error('Error retrieving sheets:', response.result.error.message);
+    });
+  }
+      
     </script>
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
