--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       // Authorization scopes required by the API; multiple scopes can be
       // included, separated by spaces.
-      const SCOPES = 'https://www.googleapis.com/auth/spreadsheets.readonly';
+      const SCOPES = 'https://www.googleapis.com/auth/spreadsheets https://www.googleapis.com/auth/drive'; //'https://www.googleapis.com/auth/spreadsheets.readonly';
 
       let tokenClient;
       let gapiInited = false;
@@ -90,7 +90,7 @@
           document.getElementById('signout_button').style.visibility = 'visible';
           document.getElementById('authorize_button').innerText = 'Refresh';
           await listMajors();
-          await create('hmmHA');
+          create('hmmHA');
           //await listSheets();
         };
 
@@ -168,7 +168,7 @@
   }
 
 
-async function create(title, callback) {
+function create(title, callback) {
   try {
     gapi.client.sheets.spreadsheets.create({
       properties: {
